aws/curator-ingress.yaml
# Ingress defines how load balancers should forward traffic
# from the internet traffic to the cluster.
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: curator-dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: curator
    environment: dev
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: curator-dev
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: curator-prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: curator
    environment: prod
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: curator-prod
              servicePort: 80
